--- a/sass/theme/_main.scss
+++ b/sass/theme/_main.scss
@@ -360,12 +360,13 @@ main, .main{
 	width: 100%;
 	float: none;
 	display: block;
-	margin-top: $gutter*3;
+
 	padding-left: 0;
 	height: 100%;
 	@media(min-width: 55em){
 	  width: 45%;
 	  float: left;
+	  margin-top: $gutter*3;
 	  display: inline-block;
 	  padding-left: 42px;
 	}
@@ -585,9 +586,10 @@ figure{
 	position: relative;
 	height: 3em;
 	width: 100%;
-	margin-top: 2em;
+	margin-top: 5em;
 	@media(min-width: 55em) {
 	  width: 12em;
+	  margin-top: 2em;
 	}
 }
 
